<resources>
    <string name="app_name">Test Your Brain</string>
    <string name="sign_in">Sign In</string>
    <string name="_0">0</string>
    <string name="didn_t_recieve_otp">Didn\'t recieve OTP?</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="resend_otp_in">You can Resend the OTP in</string>
    <string name="resend">Resend</string>
    <string name="resend_code">RESEND CODE</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="verify_otp_sent_to_your_mobile_number">Verify OTP sent to your mobile number</string>
    <string name="back">Back</string>
    <string name="get_otp">Get OTP</string>
    <string name="_12345678798">1234567890</string>
    <string name="you_can_resend_the_otp_in">You can Resend the OTP in</string>
    <string name="didt_recive_code">Didn\'t receive the code?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="logo">logo</string>
    <string name="sign_out">Sign out</string>

    <string name="a">A sort of malware computer program that keeps replicating itself and can easily get diffused into other computers through internet is known as</string>
    <string name="a_1">Virus</string>
    <string name="a_2">Worms</string>
    <string name="a_3">Trojans</string>
    <string name="a_4">Spyware</string>
    <string name="a_correct">Worms</string>

    <string name="b">Which among the following is used in creating a chart?</string>
    <string name="b_1">Chart wizard</string>
    <string name="b_2">Computing wizard</string>
    <string name="b_3">Calculating wizard</string>
    <string name="b_4">Data wizard</string>
    <string name="b_correct">Chart wizard</string>

    <string name="c">If you need to select all the contents of MS Word, which command will you give?</string>
    <string name="c_1">Ctrl + A</string>
    <string name="c_2">Ctrl + B</string>
    <string name="c_3">Ctrl + C</string>
    <string name="c_4">Ctrl + D</string>
    <string name="c_correct">Ctrl + A</string>

    <string name="d">If you restart your computer by switching it off (i.e. power cut), it is known as</string>
    <string name="d_1">Soft boot</string>
    <string name="d_2">Cold boot</string>
    <string name="d_3">Warm boot</string>
    <string name="d_4">A &amp; C</string>
    <string name="d_correct">Cold boot</string>

    <string name="e">The Third Generation Computer used</string>
    <string name="e_1">Transistors</string>
    <string name="e_2">Integrated circuit</string>
    <string name="e_3">Vacuum tube</string>
    <string name="e_4">Chip</string>
    <string name="e_correct">Integrated circuit</string>

    <string name="f">Which among the following is the shortcut key for Help in your computer system?</string>
    <string name="f_1">F1</string>
    <string name="f_2">F2</string>
    <string name="f_3">F9</string>
    <string name="f_4">Ctrl + F</string>
    <string name="f_correct">F1</string>

    <string name="g">Who among the following had first invented the first electronic digital computer?</string>
    <string name="g_1">John Vincent Atanasoff</string>
    <string name="g_2">Greg Chesson</string>
    <string name="g_3">Charles Babbage</string>
    <string name="g_4">Jack Dorsey</string>
    <string name="g_correct">John Vincent Atanasoff</string>

    <string name="h">Who among the following is popular as "Mother of Internet"</string>
    <string name="h_1">Ada Lovelace</string>
    <string name="h_2">Grace Hopper</string>
    <string name="h_3">Radia Perlman</string>
    <string name="h_4">Anita Borg</string>
    <string name="h_correct">Radia Perlman</string>

    <string name="i">Which among the following was the first computer virus?</string>
    <string name="i_1">Conficker</string>
    <string name="i_2">I Love you</string>
    <string name="i_3">Melissa</string>
    <string name="i_4">Elk</string>
    <string name="i_correct">Elk</string>

    <string name="j">Which among the following correctly explains the term ‘internet?’</string>
    <string name="j_1">Internet network</string>
    <string name="j_2">International network</string>
    <string name="j_3">Intercontinental network</string>
    <string name="j_4">Information network</string>
    <string name="j_correct">International network</string>

    <string name="k">Which among the following is also known as Information Highway?</string>
    <string name="k_1">Internet</string>
    <string name="k_2">Intranet</string>
    <string name="k_3">LAN</string>
    <string name="k_4">Web browser</string>
    <string name="k_correct">Internet</string>

    <string name="l">Which one of the following states, first created telephone directory on internet?</string>
    <string name="l_1">Tamil Nadu</string>
    <string name="l_2">Sikkim</string>
    <string name="l_3">Kerala</string>
    <string name="l_4">Karnataka</string>
    <string name="l_correct">Kerala</string>

    <string name="m">Unsolicited email is known as</string>
    <string name="m_1">Phishing</string>
    <string name="m_2">Spam</string>
    <string name="m_3">Malware</string>
    <string name="m_4">Eware</string>
    <string name="m_correct">Spam</string>

    <string name="n">The computer application that integrates texts, sound, image, graphics, videos or other sort of animation, is known as</string>
    <string name="n_1">Integrated media</string>
    <string name="n_2">Entertaining media</string>
    <string name="n_3">Multimedia</string>
    <string name="n_4">Hypermedia</string>
    <string name="n_correct">Multimedia</string>

    <string name="o">1 Megabyte (Mb) =</string>
    <string name="o_1">1,024 kb</string>
    <string name="o_2">1,000 kb</string>
    <string name="o_3">1,200 kb</string>
    <string name="o_4">1,225 kb</string>
    <string name="o_correct">1,024 kb</string>

    <string name="p">Who among the following has developed the Perl programing language?</string>
    <string name="p_1">Larry Wall</string>
    <string name="p_2">Guido van Rossum</string>
    <string name="p_3">Joe Armstrong</string>
    <string name="p_4">Yukihiro Matsumoto</string>
    <string name="p_correct">Larry Wall</string>

    <string name="q">Who among the following has designed the JavaScript programing language?</string>
    <string name="q_1">Rasmus Lerdorf</string>
    <string name="q_2">Guido van Rossum</string>
    <string name="q_3">Brendan Eich</string>
    <string name="q_4">James Gosling</string>
    <string name="q_correct">Brendan Eich</string>

    <string name="r">Who among the following is more popular as the first computer programmer?</string>
    <string name="r_1">Ada Lovelace</string>
    <string name="r_2">Adam Osborne</string>
    <string name="r_3">Adi Shamir</string>
    <string name="r_4">Alain Glavieux</string>
    <string name="r_correct">Ada Lovelace</string>

    <string name="s">Who among the following first coined the term "wiki?"</string>
    <string name="s_1">Julian Assange</string>
    <string name="s_2">Rafael Correa</string>
    <string name="s_3">Ward Cunningham</string>
    <string name="s_4">Greg Chesson</string>
    <string name="s_correct">Ward Cunningham</string>

    <string name="t">Which among the following correctly defines the term data processing?</string>
    <string name="t_1">Data input in computer</string>
    <string name="t_2">Data output from computer</string>
    <string name="t_3">A &amp; B both</string>
    <string name="t_4">To retrieve, transform, or classify information in a computer</string>
    <string name="t_correct">To retrieve, transform, or classify information in a computer</string>

</resources>