<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/top_conner_radius_solid"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingEnd="24dp"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/text_heading_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/mobile_number"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="3">

            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/et_style"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                app:ccpDialog_showCloseIcon="true"
                app:ccpDialog_textColor="@color/black"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoFormatNumber="false"
                app:ccp_contentColor="@color/white"
                app:ccp_showFlag="false"
                app:ccp_showFullName="false"
                app:ccp_showNameCode="false" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:background="@drawable/et_style"
                android:drawableTint="@color/text_color"
                android:hint="@string/_12345678798"
                android:text="9876543210"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/edittext_text_color"
                android:textSize="18sp" />

        </LinearLayout>

        <Button
            android:id="@+id/getotp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_primary_selector"
            android:padding="10dp"
            android:text="@string/get_otp"
            android:textColor="@color/edittext_bg_color"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/otp_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/top_conner_radius_solid"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="start"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:letterSpacing=".1"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textColor="@color/text_heading_color"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/otp_verification"
            android:textAllCaps="true"
            android:textColor="@color/text_heading_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/verify_otp_sent_to_your_mobile_number"
            android:textAllCaps="false"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="6">

            <EditText
                android:id="@+id/otp1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:background="@drawable/btn_otp"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="1"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/edittext_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/otp2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:background="@drawable/btn_otp"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="1"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/edittext_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/otp3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:background="@drawable/btn_otp"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="1"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/edittext_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/otp4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:background="@drawable/btn_otp"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="1"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/edittext_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/otp5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:background="@drawable/btn_otp"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="1"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/edittext_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/otp6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:background="@drawable/btn_otp"
                android:hint="@string/_0"
                android:inputType="number"
                android:maxLength="1"
                android:paddingHorizontal="18dp"
                android:paddingVertical="16dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/edittext_text_color"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/resend_code_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/otp_expires_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/didn_t_recieve_otp"
                android:textColor="@color/edittext_text_color" />

            <TextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"

                android:text="@string/resend_code"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_primary_selector"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="@color/edittext_bg_color"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>